<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:title="@string/weight"
        android:key="weight"
        android:summary="Please provide weight"></EditTextPreference>
    <ListPreference android:title="@string/gender"
        android:summary="Select your gender"
        android:key="gender"
        android:defaultValue="Male"
        android:entries="@array/genderArray"
        android:entryValues="@array/genderValues" />
    <EditTextPreference android:title="@string/locationName"
        android:key="locationName"
        android:summary="Name your Fighting Grounds"></EditTextPreference>
    <EditTextPreference android:title="@string/locationLong"
        android:key="locationLong"
        android:summary="Please provide longitude of Fighting Grounds"></EditTextPreference>
    <EditTextPreference android:title="@string/locationLat"
        android:key="locationLat"
        android:summary="Please provide latitude of Fighting Grounds"></EditTextPreference>
    <Preference android:title="@string/locationButton"
        android:key="locationButton"
        android:summary="Set Fighting Grounds to current location"></Preference>
</PreferenceScreen>